# A-Bugs-Life-Project

./: Documentation.txt  final-walkthrough.txt  final_report.md  members.txt  proposal.md
ABugsLifeV2/: CMakeLists.txt  Notes.cpp
ABugsLifeV2/includes/: AntProc.h  data_models.hpp  dependencies.txt
ABugsLifeV2/src/: AntProc.cpp  database.cpp  main.cpp
ABugsLifeV2/tests/: tests.cpp
